--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <style>
   background : #708090
 </style>
-<a href="https://xboxminato413server.github.io/tickethistory/transcript-closed-0007" class="btn-large waves-effect waves-light">テスト</a>
+<a href="https://xboxminato413server.github.io/tickethistory/transcript-closed-0007" class="btn-large waves-effect waves-light" target="_blank" rel="noopener noreferrer">テスト</a>
 <br>
-<a href="https://xboxminato413server.github.io/tickethistory/transcript-closed-0011" class="btn-large waves-effect waves-light">scratchAuther認証履歴について</a>
+<a href="https://xboxminato413server.github.io/tickethistory/transcript-closed-0011" class="btn-large waves-effect waves-light" target="_blank" rel="noopener noreferrer">scratchAuther認証履歴について</a>
