--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <style>
-  background : #708090
+body {
+　　background-color: #708090;
+}
 </style>
+<body>
 <a href="https://xboxminato413server.github.io/tickethistory/transcript-closed-0007" class="btn-large waves-effect waves-light" target="_blank" rel="noopener noreferrer">テスト</a>
 <br>
 <a href="https://xboxminato413server.github.io/tickethistory/transcript-closed-0011" class="btn-large waves-effect waves-light" target="_blank" rel="noopener noreferrer">scratchAuther認証履歴について</a>
+</body>
