--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <body bgcolor="#708090">
-<a href="https://xboxminato413server.github.io/tickethistory/transcript-closed-0007" class="btn-large waves-effect waves-light" target="_blank" rel="noopener noreferrer">テスト</a>
+<a href="https://xboxminato413server.github.io/tickethistory/transcript-closed-0007" class="btn-large waves-effect waves-black" target="_blank" rel="noopener noreferrer">テスト</a>
 <br>
-<a href="https://xboxminato413server.github.io/tickethistory/transcript-closed-0011" class="btn-large waves-effect waves-light" target="_blank" rel="noopener noreferrer">scratchAuther認証履歴について</a>
+<a href="https://xboxminato413server.github.io/tickethistory/transcript-closed-0011" class="btn-large waves-effect waves-black" target="_blank" rel="noopener noreferrer">scratchAuther認証履歴について</a>
 </body>
 
